--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^6.0.0-beta.12",
     "@mui/material": "^6.1.4",
     "@mui/x-date-pickers": "^7.21.0",
+    "@vercel/analytics": "^1.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
