Dark Mode work in progress

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "echarts-for-react": "^3.0.2",
     "firebase": "^10.14.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
