--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/lab": "^6.0.0-beta.12",
     "@mui/material": "^6.1.4",
-    "@mui/x-date-pickers": "^7.21.0",
+    "@mui/x-date-pickers": "^7.28.3",
     "@vercel/analytics": "^1.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "firebase": "^10.14.1",
