--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
-    "@mui/lab": "^6.0.0-beta.12",
     "@mui/material": "^6.1.4",
-    "@mui/x-date-pickers": "^7.28.3",
     "@vercel/analytics": "^1.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.8.4",
