--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.28.3",
     "@vercel/analytics": "^1.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.8.4",
