--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.5.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.27.0",
+    "react-to-print": "^3.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
