--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.27.0",
     "react-to-print": "^3.0.6",
+    "sweetalert2": "^11.19.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
