--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
+    "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^6.1.4",
     "@mui/x-date-pickers": "^7.28.3",
     "@vercel/analytics": "^1.5.0",
