--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "6.1.4",
-    "@mui/lab": "6.0.0-alpha.61",
-    "@mui/material": "6.1.4",
-    "@mui/x-date-pickers": "6.11.3",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/lab": "^7.0.0-beta.11",
+    "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.28.3",
     "@vercel/analytics": "^1.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.8.4",
